; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-search-extension.c_prepare_search_query.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-search-extension.c_prepare_search_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@is_search = common dso_local global i64 0, align 8
@SEARCH_EXTENSION = common dso_local global i64 0, align 8
@SEARCHX_EXTENSION = common dso_local global i64 0, align 8
@TARG_EXTENSION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @prepare_search_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prepare_search_query(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 0, i64* @is_search, align 8
  %6 = load i64, i64* @SEARCH_EXTENSION, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i64, i64* @SEARCHX_EXTENSION, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8, %2
  %12 = load i8*, i8** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @search_prepare_search_query(i8* %12, i32 %13)
  store i32 %14, i32* %3, align 4
  br label %25

15:                                               ; preds = %8
  %16 = load i64, i64* @TARG_EXTENSION, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %15
  %19 = load i8*, i8** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @targ_prepare_search_query(i8* %19, i32 %20)
  store i32 %21, i32* %3, align 4
  br label %25

22:                                               ; preds = %15
  %23 = call i32 @assert(i32 0)
  br label %24

24:                                               ; preds = %22
  br label %25

25:                                               ; preds = %11, %18, %24
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @search_prepare_search_query(i8*, i32) #1

declare dso_local i32 @targ_prepare_search_query(i8*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
